--- a/webapp/src/css/RightSidePanel.css
+++ b/webapp/src/css/RightSidePanel.css
@@ -13,9 +13,6 @@
     }
 }
 
-#generate > .ui-button {
-    width: 100%;
-}
 
 
 
